--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>plotwala</title>
 </head>
-<body>
+<body style="text-align: center;">
     <h1>plotwala.com</h1>
+    <h2>We are launching soon...</h2>
+    <h4>We will happy to see you benefiting from the services we provides through <b><i>plotwala.com</i></b></h4>
 </body>
 </html>
