--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body style="text-align: center;">
     <h1>plotwala.com</h1>
     <h2>We are launching soon...</h2>
-    <h4>We will happy to see you benefiting from the services we provides through <b><i>plotwala.com</i></b></h4>
+    <h4>We will be happy to see you benefiting from the services we provides through <b><i>plotwala.com</i></b></h4>
 </body>
 </html>
